<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="edu.lewisu.cs.example.implicitintents.MainActivity">

    <Button
        android:id="@+id/websiteButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/open_website"
        android:onClick="onClickWebsite"/>

    <Button
        android:id="@+id/searchButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/search_google"
        android:onClick="onClickSearchWeb"/>

    <Button
        android:id="@+id/contactButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/open_contacts"
        android:onClick="onClickViewContacts"/>

    <Button
        android:id="@+id/callButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/call_ray"
        android:onClick="onClickPhoneCall"
        />

    <Button
        android:id="@+id/shareButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/share_text"
        android:onClick="onClickShareText"/>

    <Button
        android:id="@+id/mapButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:padding="20dp"
        android:text="@string/find_lewis_university"
        android:onClick="onClickOpenAddress"/>

</LinearLayout>